# Agentic-Scenario-Planning

./: .env.example  .gitignore  Agent Architecture  Baseline Events  README.md  pyproject.toml
docs/eval/: CASCI_Baseline_Query_Problems.docx  event_41_expert_benchmark.md  generate_baseline_problems_doc.py
src/casci/: graph.py  settings.py  state.py
src/casci/agents/: demand_decomposition.py  financial_impact.py  orchestrator.py  scenario_generator.py  supply_constraint.py
src/casci/prompts/: demand_decomposition.md  financial_impact.md  loader.py  scenario_generator.md
src/casci/tools/: Baseline_Events_Parameterized.sql  db.py  demand_tools.py  financial_tools.py  supply_tools.py
tests/integration/: test_full_pipeline.py
tests/integration/eval_dataset/event_41/: ground_truth.json
tests/unit/: test_demand_tools.py  test_financial_tools.py  test_supply_tools.py
